1688Web : "about" pages

--- a/src/apps/1688Admin/components/topbar/index-main.pug
+++ b/src/apps/1688Admin/components/topbar/index-main.pug
@@ -4,7 +4,7 @@
         span 双创智慧园区后台管理系统
     .right-shoulder
         .pull-left
-            a.btn.btn-large.btn-topbar(href="index.html" target="_blank")
+            a.btn.btn-large.btn-topbar(href="../html/index.html" target="_blank")
                 i.fa.fa-home
                 |&nbsp;门户首页
         .dropdown.pull-left
