--- a/src/apps/1688Web/components/topbar/index-about.pug
+++ b/src/apps/1688Web/components/topbar/index-about.pug
@@ -5,7 +5,7 @@
         .menu#menu
             .iscroller
                 .rootmenu
-                    .menu-btn.sel 首页
+                    a.menu-btn(href="index.html") 首页
                 .rootmenu
                     .menu-btn 招商
                     .submenu
@@ -75,7 +75,7 @@
                                 .subsubmenu-btn 时事热点
                                 .subsubmenu-btn 先锋故事
                 .rootmenu
-                    .menu-btn 关于
+                    .menu-btn.sel 关于
                     .submenu
                         a.submenu-btn(href="about.html?tab=tab_1") 园区简介
                         a.submenu-btn(href="about.html?tab=tab_2") 组织架构
