--- a/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
@@ -9,7 +9,7 @@
             padding-left 0.2rem
             padding-right 0.2rem
 .modal-dialog
-    margin DEFAULT_SPACE
+    margin DEFAULT_SPACE auto
 .modal-content
     border none
     box-shadow 0 0 0.1rem 0.05rem alpha(BLACK,0.1)
