--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -141,17 +141,27 @@ CacuRowSpace(space_num)
                         left 0.5*space_num
                         right 0.5*space_num
                         bottom space_num
+        &.no-bottom
+            margin-bottom -1*space_num
         &.top-row
             margin-top space_num
 
-.row-space-0
-    CacuRowSpace(0)
 
-.row-space-partner
+.row-space-common
+    CacuRowSpace(INDEX_SPACE)
+
+.row-space-0
+    CacuRowSpace(0rem)
+
+.row-space-10
     CacuRowSpace(0.1rem)
+
 .mobile
-    .row-space-partner
-        CacuRowSpace(0.08rem)
+    .row-space-common
+        CacuRowSpace(INDEX_SPACE_MOBILE)
+    .row-space-10
+        CacuRowSpace(0.04rem)
+    
 
 cacuHeightPct(pct,total)
     padding-top (pct/total)*100 + '%'
@@ -183,16 +193,6 @@ for i in (1..10)
             &:before
                 cacuHeightPct(i,j)
 
-.mobile
-    for i in (1..10)
-        for j in range(1,i)
-            .abs-hp-mobile-{j}of{i}
-                &:before
-                    cacuHeightPct(j,i)
-            .abs-hp-mobile-{i}of{j}
-                &:before
-                    cacuHeightPct(i,j)
-
 
 @require '../../components/topbar/index'
 @require '../../components/slider/index'
@@ -205,7 +205,8 @@ for i in (1..10)
 @require '../../components/block-title/index'
 @require '../../components/sidebar/index'
 @require '../../components/footer/index'
-
+@require '../../components/banner/index'
+@require '../../components/tabpage/index'
 @require 'ie9fix'
 
 
