--- a/src/apps/huiye/components/freq-used/index.jade
+++ b/src/apps/huiye/components/freq-used/index.jade
@@ -3,30 +3,30 @@
         a.freq-used-box(href="#")
             .freq-used-icon
                 i.fa.fa-file-text
-            .freq-used-title 上级发文
+            .freq-used-title 加班申请流程
 .col-1of5
     .col-content
         a.freq-used-box(href="#")
             .freq-used-icon
-                i.fa.fa-archive
-            .freq-used-title 档案管理
+                i.fa.fa-beer
+            .freq-used-title 请假流程
 .col-1of5
     .col-content
         a.freq-used-box(href="#")
             .freq-used-icon
-                i.fa.fa-tty
-            .freq-used-title 损耗处理
+                i.fa.fa-sticky-note
+            .freq-used-title 销假流程
 .col-1of5
     .col-content
         a.freq-used-box(href="#")
             .freq-used-icon
-                i.fa.fa-search
-            .freq-used-title 库存查询
+                i.fa.fa-sign-out
+            .freq-used-title 外出条流程
 .col-1of5
     .col-content
         a.freq-used-box(href="#")
             .freq-used-icon
-                i.fa.fa-book
-            .freq-used-title 数据字典
+                i.fa.fa-wrench
+            .freq-used-title 设备保修流程
     
             
