--- a/src/apps/huiye/components/topbar/index-logined.jade
+++ b/src/apps/huiye/components/topbar/index-logined.jade
@@ -9,7 +9,8 @@
                 i.fa.fa-bell
                 .new-dot
         .popbox.pull-left
-            .bttn.bttn-circle2px.appendleft.bg-blue-ocean.bg-hover-lighten.font-white(data-toggle="popbox")
+            //添加data-toggle="popbox"属性启用弹出下拉菜单
+            .bttn.bttn-circle2px.appendleft.bg-blue-ocean.bg-hover-lighten.font-white
                 |Admin&nbsp;
                 i.fa.fa-angle-down
             ul.popmenu-box.popbox-content(data-align='h-right')
