--- a/src/apps/huiye/components/work-carousel/index.jade
+++ b/src/apps/huiye/components/work-carousel/index.jade
@@ -2,12 +2,18 @@
     .item
         .item-img
             img(src="images/work-carousel-1.png")
-        .item-info 对于企业识别，人们最熟悉的就是视觉识别。但对企业来讲，其实纯粹的视觉识别是没有什么实际意义的。视觉识别只有与行为识别结合在一起才有意义和内涵。一个企业只有具备与众不同的、良好的行为识别才能给社会公众留下美好的印象。
+        .item-info
+            p 敬人 诚信 精致  高效
+            p 人生在世，先做人、后做事。 敬人：敬人者，人恒敬之。
     .item
         .item-img
             img(src="images/work-carousel-2.png")
-        .item-info 对于企业识别，人们最熟悉的就是视觉识别。但对企业来讲，其实纯粹的视觉识别是没有什么实际意义的。视觉识别只有与行为识别结合在一起才有意义和内涵。一个企业只有具备与众不同的、良好的行为识别才能给社会公众留下美好的印象。
+        .item-info 
+            p 敬人：敬人者，人恒敬之。敬客户、敬同事、敬家人、敬我们伟大的祖国、敬我们赖以生存的大自然，以“敬人”创造发展的空间。
+            p 诚信：待人以诚，处事唯信。真诚的沟通会让我们的方向更准确，承诺的信守将使我们的产品和服务更可靠，以“诚信”为立世之根本。
     .item
         .item-img
             img(src="images/work-carousel-3.png")
-        .item-info 对于企业识别，人们最熟悉的就是视觉识别。但对企业来讲，其实纯粹的视觉识别是没有什么实际意义的。视觉识别只有与行为识别结合在一起才有意义和内涵。一个企业只有具备与众不同的、良好的行为识别才能给社会公众留下美好的印象。
+        .item-info
+            p 精致：世间本无“玉”，竭力而求之。始终以精益求精的态度投入工作，持续改善，不断创新，保持追求极致的姿态，让“精致”成为我们的标签。
+            p 高效：追求更低的资源消耗，追求更快的需求响应，以实现客户价值的最大化。让“高效”成为我们的行动准则。
