--- a/src/apps/huiye/components/work-carousel/index.styl
+++ b/src/apps/huiye/components/work-carousel/index.styl
@@ -21,6 +21,11 @@
             overflow hidden
             line-height 22px
             font-size 12px
+            p
+                text-indent 2em
+                margin 0
+                -webkit-margin-before 0
+                -webkit-margin-after 0
     .owl-nav
         display none
     .owl-dots
