--- a/src/apps/huiye/webapp/index.jade
+++ b/src/apps/huiye/webapp/index.jade
@@ -48,21 +48,21 @@ block content
                 .col-content
                     .block-title.no-bottom.type2
                         .block-title-head 
-                            |行业资讯
+                            |备忘录
                             .block-title-head-deco
                         a.block-title-shoulder(href="javascript:;") 更多
                     include ../components/text-list/text-list
                 .col-content
                     .block-title.type2
                         .block-title-head 
-                            |文化理念
+                            |公司宗旨
                             .block-title-head-deco
                         a.block-title-shoulder(href="javascript:;") 更多
                     include ../components/work-carousel/index
                 .col-content
                     .block-title.no-bottom.type2
                         .block-title-head 
-                            |备忘录
+                            |行业资讯
                             .block-title-head-deco
                         a.block-title-shoulder(href="javascript:;") 更多
                     include ../components/text-list/text-list
