--- a/src/apps/1688Admin/webapp/party-learn-hotspot.pug
+++ b/src/apps/1688Admin/webapp/party-learn-hotspot.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 工会活动
+                h2 时事热点
