--- a/src/apps/1688Admin/webapp/party-member-style.pug
+++ b/src/apps/1688Admin/webapp/party-member-style.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 园区活动发布
+                h2 青春风采
