--- a/src/apps/1688Admin/webapp/party-news.pug
+++ b/src/apps/1688Admin/webapp/party-news.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 园区活动
+                h2 党建要闻
