--- a/src/apps/1688Admin/webapp/party.pug
+++ b/src/apps/1688Admin/webapp/party.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 党政首页
+                h2 党团首页
