--- a/src/apps/1688Web/components/features/features-items.styl
+++ b/src/apps/1688Web/components/features/features-items.styl
@@ -2,7 +2,7 @@ FITEM_TOP = 0.2rem
 FITEM_TOP_MOBILE = 0.08rem
 
 FITEM_BGC = transparent
-FITEM_BGC_HOVER = THEME_COLOR
+FITEM_BGC_HOVER = GRAY_F5
 
 FITEM_BORDER_RADIUS = 0.04rem
 FITEM_BORDER_RADIUS_MOBILE = 0.02rem
@@ -19,9 +19,9 @@ FITEM_TITLE_FISZE = 0.18rem
 FITEM_TITLE_FISZE_MOBILE = 0.1rem
 
 FITEM_ICON_COLOR = GRAY_88
-FITEM_ICON_COLOR_HOVER = WHITE
+FITEM_ICON_COLOR_HOVER = THEME_COLOR
 FITEM_TITLE_COLOR = GRAY_66
-FITEM_TITLE_COLOR_HOVER = WHITE
+FITEM_TITLE_COLOR_HOVER = GRAY_33
 
 FITEM_TITLE_LETTER_SPACING = 0.02rem
 FITEM_TITLE_LETTER_SPACING_MOBILE = 0.01rem
