--- a/src/apps/huiye/webapp/stylus/index.styl
+++ b/src/apps/huiye/webapp/stylus/index.styl
@@ -52,4 +52,5 @@ html
 @require '../../components/login/index'
 @require '../../components/freq-used/index'
 @require '../../components/work-carousel/index'
+@require '../../components/calendar/index'
 @require '../../components/footer/index'
