--- a/src/apps/1688Admin/components/topbar/index-party.pug
+++ b/src/apps/1688Admin/components/topbar/index-party.pug
@@ -7,7 +7,7 @@
     .right-shoulder
         .dropdown.pull-left
             .btn.btn-large.btn-topbar.btn-sys-select#topbar_sys_btn(data-toggle="dropdown" aria-haspopup="true" aria-expanded="true")
-                |&nbsp;党政管理&nbsp;
+                |&nbsp;党团管理&nbsp;
                 i.fa.fa-angle-down
             ul.popmenu-box.popbox-content.dropdown-menu(aria-labelledby="dm_dropdown")
                 li
@@ -41,7 +41,7 @@
                 li
                     .btn.btn-popmenu.sel
                         i.fa.fa-star-o
-                        |&nbsp;党政管理
+                        |&nbsp;党团管理
                 li
                     a.btn.btn-popmenu(href='index-platform.html#platform.html' target="_blank")
                         i.fa.fa-desktop
