--- a/src/apps/1688Admin/components/topbar/index-sys.pug
+++ b/src/apps/1688Admin/components/topbar/index-sys.pug
@@ -41,7 +41,7 @@
                 li
                     a.btn.btn-popmenu(href='index-party.html#party.html' target="_blank")
                         i.fa.fa-star-o
-                        |&nbsp;党政管理
+                        |&nbsp;党团管理
                 li
                     a.btn.btn-popmenu(href='index-platform.html#platform.html' target="_blank")
                         i.fa.fa-desktop
