--- a/src/apps/1688Admin/webapp/party-learn-story.pug
+++ b/src/apps/1688Admin/webapp/party-learn-story.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 党群建设
+                h2 先锋故事
