--- a/src/apps/1688Admin/webapp/party-member-info.pug
+++ b/src/apps/1688Admin/webapp/party-member-info.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 团员活动发布
+                h2 基层团讯
