--- a/src/apps/1688Admin/webapp/party-member-world.pug
+++ b/src/apps/1688Admin/webapp/party-member-world.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 党员添加
+                h2 团员天地
