--- a/src/apps/1688Admin/webapp/party-union-info.pug
+++ b/src/apps/1688Admin/webapp/party-union-info.pug
@@ -6,4 +6,4 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 工会活动发布
+                h2 工会快讯
