--- a/src/apps/1688Web/components/footer/index.bak.pug
+++ b/src/apps/1688Web/components/footer/index.bak.pug
@@ -29,10 +29,16 @@
                             img(src = IMG_DIR + 'logo-wuye.png')
                     a.btn-join(href="javascript:;") 申请入驻
             .col-xs-12
-                .links.mobile-hidden
+                ul.links.mobile-hidden
+                    li
+                        a(href="javascript:;") 关于我们
+                    li
+                        a(href="javascript:;") 新闻资讯
+                    li
+                        a(href="javascript:;") 创业服务
+                    li
+                        a(href="javascript:;") 招商资源
                 .coypright 
                     |&nbsp;版权所有：中艺1688创意产业园&nbsp;
                     br.mobile-visible
-                    |Copyright ©2012-2017 All Rights Reserved Zhongyi Design Co.,ltd&nbsp;&nbsp;站点统计：
-                    a(href="https://web.umeng.com/demo.php" target="_blank")
-                        img(src=IMG_DIR + 'cnzz.png' style="margin-top:-2px;")
+                    |Copyright ©2012-2017 All Rights Reserved Zhongyi Design Co.,ltd
